Various restyling fixes + malihu custom scrollbar integration

--- a/frontend/static/styles/components/_buttons.scss
+++ b/frontend/static/styles/components/_buttons.scss
@@ -21,6 +21,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  text-shadow: none;
   line-height: 12px;
   color: $white;
   background: $dark-orange;
